fix nav and visible input pass

--- a/my-app/public/css/doctorInfo.css
+++ b/my-app/public/css/doctorInfo.css
@@ -209,9 +209,11 @@ h6 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	/* height: 100vh; */
 	opacity: 0;
 	animation: fadeIn 1s forwards;
+	padding-top: 10%;
+	padding-bottom: 10%;
 }
 
 /*--------------------------------------------------------------
@@ -225,11 +227,11 @@ h6 {
 
 .doctor-img {
 	flex: 1;
-	padding: 20px;
+	padding-left: 300px;
 }
 
 .doctor-img img {
-	width: 100%;
+	width: 50%;
 	overflow: hidden;
 	animation: fadeIn 1s 0.5s forwards;
 }
@@ -237,6 +239,9 @@ h6 {
 .doctor-details {
 	flex: 1;
 	padding: 20px;
+	padding-right: 300px;
+	padding-left: 0;
+	padding-top: 0;
 }
 
 .doctor-name {
