--- a/my-app/public/css/navBar.css
+++ b/my-app/public/css/navBar.css
@@ -148,6 +148,14 @@ h6 {
 	padding: 0;
 }
 
+.navbar_headerr {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 9999;
+}
+
 .navbar ul {
 	margin: 0;
 	padding: 0;
