--- a/my-app/src/components/account/signUp.css
+++ b/my-app/src/components/account/signUp.css
@@ -5,3 +5,15 @@
 	/* height: 100vh; */
 	padding-top: 180px;
 }
+.password-input {
+	position: relative;
+}
+
+#eye_icon {
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+	user-select: none;
+}
